<resources>
    <string name="app_name">terminal</string>
    <string name="command_hint">command</string>
    <string name="send">enter</string>
    <string name="ctrl">Ctrl</string>
    <string name="escape">Esc</string>
    <string name="tab">Tab</string>
    <string name="left">Left</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="right">Right</string>
    <string name="left_symbol">&#x2190;</string>
    <string name="down_symbol">&#x2193;</string>
    <string name="up_symbol">&#x2191;</string>
    <string name="right_symbol">&#x2192;</string>
</resources>
