<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111418"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.terminal.TerminalSurface
        android:id="@+id/terminal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#20272B"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ctrl"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ctrl" />
        <Button
            android:id="@+id/escape"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/escape" />
        <Button
            android:id="@+id/tab"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/tab" />
        <Button
            android:id="@+id/left"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/left"
            android:text="@string/left_symbol" />
        <Button
            android:id="@+id/down"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/down"
            android:text="@string/down_symbol" />
        <Button
            android:id="@+id/up"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/up"
            android:text="@string/up_symbol" />
        <Button
            android:id="@+id/right"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/right"
            android:text="@string/right_symbol" />
    </LinearLayout>
</LinearLayout>
